# iland-model

./: .gitignore  CMakeLists.txt  forest_env.py  group_species.py  iland_atari_env.py  qr-dqn-example.py  run_model.py  train_agent.py  train_agent_sac.py  train_dqn_agent.py  tune_hyperparams.py
data/: npbg_dem50fix.asc  project.xml  seedling_init.txt
data/lip/: FONtrees_acru.xml
data/process_0/: project.xml  seedling_init.txt
data/process_1/: project.xml  seedling_init.txt
eval_logs/: evaluations.npz
src/apidoc/ABE/: abe_stand.js
src/core/: model.cpp  model.h  modelcontroller.cpp  modelcontroller.h  sapling.cpp  standloader.cpp  tree.cpp  version.cpp  watercycle.cpp
src/ilandc/: consoleshell.cpp  main.cpp
src/interface/: python.cpp  python.hpp
src/tools/: expressionwrapper.cpp  globalsettings.cpp  scriptglobal.cpp
